--- a/content/_config.yml
+++ b/content/_config.yml
@@ -6,7 +6,7 @@
 #######################################################################################
 # Book settings
 title                       : Languages  # The title of the book. Will be placed in the left navbar.
-author                      : Juha Teuho & Prashant Mahato  # The author of the book
+author                      : HIP Education and Open Data Team  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
 logo                        : images/logo.png  # A path to the book logo
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
